--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
     datasource:
-        driver-class-name : com.mysql.jdbc.Driver
+        driver-class-name : com.mysql.cj.jdbc.Driver
         type: com.alibaba.druid.pool.DruidDataSource
         url: jdbc:mysql://192.12.132.42:3306/test?characterEncoding=utf-8&autoReconnect=true
         username: root
